--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,7 @@
     "project": ["tsconfig.json", "tsconfig.jest.json"]
   },
   "extends": [
-    "airbnb-ts",
-    "airbnb/hooks",
+    "airbnb-base-ts",
     "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended"
   ],
@@ -27,8 +26,6 @@
     "@typescript-eslint/lines-between-class-members": "off",
     "@typescript-eslint/object-curly-spacing": ["error", "never"],
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/restrict-template-expressions": "off",
-    "react/jsx-props-no-spreading": "off",
-    "react/jsx-one-expression-per-line": "off"
+    "@typescript-eslint/restrict-template-expressions": "off"
   }
 }
