--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "prettier": "^2.3.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "@linear/sdk": "^1.15.0",
+    "@vercel/node": "^1.11.1"
   }
 }
